# poc-kafka-fastapi-docker

./: .gitignore  consumer.py  docker-compose.yml  main.py  pyproject.toml
kafka-data/: meta.properties  recovery-point-offset-checkpoint  replication-offset-checkpoint
kafka-data/__consumer_offsets-41/: partition.metadata
kafka-data/test.events-0/: partition.metadata
zk-data/version-2/: snapshot.10c  snapshot.121  snapshot.136  snapshot.14b  snapshot.160  snapshot.175  snapshot.18a  snapshot.1a0  snapshot.1b5  snapshot.1ca  snapshot.1df  snapshot.1f4  snapshot.1f6  snapshot.20b  snapshot.93  snapshot.a6  snapshot.ce  snapshot.e2  snapshot.f7
